--- a/iis/webapp.template.json
+++ b/iis/webapp.template.json
@@ -59,6 +59,9 @@
         "DB_NAME": {
             "type": "string"
         },
+        "SESSION_SECRET": {
+            "type": "secureString"
+        },
         "CLIENT_ID": {
             "type": "string"
         },
@@ -104,6 +107,7 @@
                         "DB_USER": "[parameters('DB_USER')]",
                         "DB_PASS": "[parameters('DB_PASS')]",
                         "DB_NAME": "[parameters('DB_NAME')]",
+                        "SESSION_SECRET": "[parameters('SESSION_SECRET')]",
                         "CLIENT_ID": "[parameters('CLIENT_ID')]",
                         "CLIENT_SECRET": "[parameters('CLIENT_SECRET')]",
                         "TOKEN_HOST": "[parameters('TOKEN_HOST')]"
