Generate SAS token and enable web server logs on iis stage

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "adal-node": "^0.1.22",
+    "azure": "^2.0.0-preview",
     "azure-keyvault": "^2.0.0-preview"
   }
 }
