--- a/csra/webapp-config.template.json
+++ b/csra/webapp-config.template.json
@@ -19,6 +19,7 @@
             "name": "[concat(parameters('name'), '/appsettings')]",
             "type": "Microsoft.Web/sites/config",
             "properties": {
+                "WEBSITE_NODE_DEFAULT_VERSION": "6.10.0",
                 "NODE_ENV": "[parameters('NODE_ENV')]",
                 "APPINSIGHTS_INSTRUMENTATIONKEY": "[parameters('APPINSIGHTS_INSTRUMENTATIONKEY')]"
             }
