--- a/iis/stats-webapp-config.template.json
+++ b/iis/stats-webapp-config.template.json
@@ -33,6 +33,7 @@
             "name": "[concat(parameters('name'), '/appsettings')]",
             "type": "Microsoft.Web/sites/config",
             "properties": {
+                "WEBSITE_NODE_DEFAULT_VERSION": "6.10.0",
                 "DASHBOARD_TOKEN": "[parameters('DASHBOARD_TOKEN')]",
                 "DASHBOARD_TARGET": "[parameters('DASHBOARD_TARGET')]",
                 "APPINSIGHTS_APP_ID": "[parameters('APPINSIGHTS_APP_ID')]",
