fixing template to remove json parser errors terraform plan now runs green

--- a/examples/mgmt-appgw.template.json
+++ b/examples/mgmt-appgw.template.json
@@ -18,7 +18,7 @@
     },
     "appGatewaySubnet": {
       "type": "string",
-      "defaultValue": "10.0.0.0/28",
+      "defaultValue": "10.0.4.0/28",
       "metadata": {
         "description": "Subnet prefix"
       }
@@ -88,7 +88,7 @@
       }
     },
     "appGWPubIpName": {
-      "type": "string",
+      "type": "string"
     },
     "wafRuleSetVersion": {
       "type": "string",
@@ -116,7 +116,16 @@
     "role": {
       "type": "string"
     },
-    "virtualNetworkName": {
+    "subnetName": {
+      "type": "string"
+    },
+    "appGWName": {
+      "type": "string"
+    },
+    "sslcertificate": {
+      "type": "string"
+    },
+    "sslcertificatepassword" : {
       "type": "string"
     }
   },
@@ -195,7 +204,7 @@
               "BackendAddresses": [
                 {
                   "IpAddress": "[parameters('backendIpAddress1')]"
-                },
+                }
               ]
             }
           }
@@ -250,7 +259,7 @@
           "disabledRuleGroups": []
         }
       }
-    },
+    }
   ],
   "outputs": {
     "appgwcname": {
