--- a/notm/webapp-config.template.json
+++ b/notm/webapp-config.template.json
@@ -8,7 +8,13 @@
         "NODE_ENV": {
             "type": "string"
         },
-        "API_GATEWAY_URL": {
+        "API_ENDPOINT_URL": {
+            "type": "string"
+        },
+        "USE_API_AUTH": {
+            "type": "string"
+        },
+        "REWRITE_CONTEXT_ENDPOINT": {
             "type": "string"
         },
         "NOMS_TOKEN": {
@@ -27,9 +33,11 @@
             "name": "[concat(parameters('name'), '/appsettings')]",
             "type": "Microsoft.Web/sites/config",
             "properties": {
-                "WEBSITE_NODE_DEFAULT_VERSION": "6.10.0",
+                "WEBSITE_NODE_DEFAULT_VERSION": "7.4.0",
                 "NODE_ENV": "[parameters('NODE_ENV')]",
-                "API_GATEWAY_URL": "[parameters('API_GATEWAY_URL')]",
+                "API_ENDPOINT_URL": "[parameters('API_ENDPOINT_URL')]",
+                "REWRITE_CONTEXT_ENDPOINT": "[parameters('REWRITE_CONTEXT_ENDPOINT')]",
+                "USE_API_AUTH": "[parameters('USE_API_AUTH')]",
                 "NOMS_TOKEN": "[parameters('NOMS_TOKEN')]",
                 "NOMS_PRIVATE_KEY": "[parameters('NOMS_PRIVATE_KEY')]",
                 "SESSION_SECRET": "[parameters('SESSION_SECRET')]"
