--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "adal-node": "^0.1.22",
     "azure": "^2.0.0-preview",
     "azure-keyvault": "^2.0.0-preview",
+    "base64-url": "^1.3.3",
+    "greenlock": "2",
     "mssql": "^4.0.4",
+    "pem": "^1.9.7",
+    "pify": "^3.0.0",
     "yargs": "^8.0.1"
   }
 }
