--- a/iis/webapp-config.template.json
+++ b/iis/webapp-config.template.json
@@ -29,7 +29,7 @@
         "TOKEN_HOST": {
             "type": "string"
         },
-        "HEALTHCHECK_INTERVAL": {
+        "ADMINISTRATORS": {
             "type": "string",
             "defaultValue": ""
         },
@@ -53,7 +53,7 @@
                 "CLIENT_ID": "[parameters('CLIENT_ID')]",
                 "CLIENT_SECRET": "[parameters('CLIENT_SECRET')]",
                 "TOKEN_HOST": "[parameters('TOKEN_HOST')]",
-                "HEALTHCHECK_INTERVAL": "[parameters('HEALTHCHECK_INTERVAL')]",
+                "ADMINISTRATORS": "[parameters('ADMINISTRATORS')]",
                 "APPINSIGHTS_INSTRUMENTATIONKEY": "[parameters('APPINSIGHTS_INSTRUMENTATIONKEY')]"
             }
         }
