--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mssql": "^4.0.4",
     "pem": "^1.9.7",
     "pify": "^3.0.0",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "yargs": "^8.0.1"
   }
 }
