Add viper service details to CSRA mock and stage

--- a/csra/webapp-config.template.json
+++ b/csra/webapp-config.template.json
@@ -14,6 +14,15 @@
         },
         "DB_URI": {
             "type": "string"
+        },
+        "USE_VIPER_SERVICE": {
+            "type": "string"
+        },
+        "VIPER_SERVICE_URL": {
+            "type": "string"
+        },
+        "VIPER_SERVICE_API_KEY": {
+            "type": "string"
         }
     },
     "resources": [
@@ -25,7 +34,10 @@
                 "WEBSITE_NODE_DEFAULT_VERSION": "6.10.0",
                 "NODE_ENV": "[parameters('NODE_ENV')]",
                 "APPINSIGHTS_INSTRUMENTATIONKEY": "[parameters('APPINSIGHTS_INSTRUMENTATIONKEY')]",
-                "DB_URI": "[parameters('DB_URI')]"
+                "DB_URI": "[parameters('DB_URI')]",
+                "USE_VIPER_SERVICE": "[parameters('USE_VIPER_SERVICE')]",
+                "VIPER_SERVICE_URL": "[parameters('VIPER_SERVICE_URL')]",
+                "VIPER_SERVICE_API_KEY": "[parameters('VIPER_SERVICE_API_KEY')]"
             }
         }
     ]
