Int has to be a string.
This is likely due to Terraform passing the number one as a string to
the Azure template.

--- a/shared/appservice.template.json
+++ b/shared/appservice.template.json
@@ -6,7 +6,7 @@
             "type": "string"
         },
         "workers": {
-            "type": "int"
+            "type": "string"
         },
         "service": {
             "type": "string"
