Adding the SKU type for workers.
Adding the SKU type as a param to the template to allow different
projects to choose their worker type that is suitable for their
environment.

Tested on the IIS development environment and appears to be working as
expected.

--- a/shared/appservice.template.json
+++ b/shared/appservice.template.json
@@ -8,6 +8,12 @@
         "workers": {
             "type": "string"
         },
+        "sku_tier": {
+            "type": "string"
+        },
+        "sku_name": {
+            "type": "string"
+        },
         "service": {
             "type": "string"
         },
@@ -64,8 +70,8 @@
                 "hostingEnvironment": ""
             },
             "sku": {
-                "Tier": "Standard",
-                "Name": "S1"
+                "Tier": "[parameters('sku_tier')]",
+                "Name": "[parameters('sku_name')]"
             }
         }
     ],
