--- a/csra/webapp-config.template.json
+++ b/csra/webapp-config.template.json
@@ -23,6 +23,15 @@
         },
         "VIPER_SERVICE_API_KEY": {
             "type": "string"
+        },
+        "ELITE2_URL": {
+            "type": "string"
+        },
+        "ELITE2_API_GATEWAY_TOKEN": {
+            "type": "string"
+        },
+        "ELITE2_API_GATEWAY_PRIVATE_KEY": {
+            "type": "string"
         }
     },
     "resources": [
@@ -37,7 +46,10 @@
                 "DB_URI": "[parameters('DB_URI')]",
                 "USE_VIPER_SERVICE": "[parameters('USE_VIPER_SERVICE')]",
                 "VIPER_SERVICE_URL": "[parameters('VIPER_SERVICE_URL')]",
-                "VIPER_SERVICE_API_KEY": "[parameters('VIPER_SERVICE_API_KEY')]"
+                "VIPER_SERVICE_API_KEY": "[parameters('VIPER_SERVICE_API_KEY')]",
+                "ELITE2_URL": "[parameters('ELITE2_URL')]",
+                "ELITE2_API_GATEWAY_TOKEN": "[parameters('ELITE2_API_GATEWAY_TOKEN')]",
+                "ELITE2_API_GATEWAY_PRIVATE_KEY": "[parameters('ELITE2_API_GATEWAY_PRIVATE_KEY')]"
             }
         }
     ]
