--- a/notm/webapp-config.template.json
+++ b/notm/webapp-config.template.json
@@ -24,6 +24,9 @@
         "NOMS_PRIVATE_KEY": {
             "type": "secureString"
         },
+        "GOOGLE_ANALTICS_ID": {
+            "type": "secureString"
+        },
         "SESSION_SECRET": {
             "type": "secureString"
         }
@@ -41,6 +44,7 @@
                 "USE_API_GATEWAY_AUTH": "[parameters('USE_API_GATEWAY_AUTH')]",
                 "NOMS_TOKEN": "[parameters('NOMS_TOKEN')]",
                 "NOMS_PRIVATE_KEY": "[parameters('NOMS_PRIVATE_KEY')]",
+                "GOOGLE_ANALYTICS_ID": "[parameters('GOOGLE_ANALYTICS_ID')]",
                 "SESSION_SECRET": "[parameters('SESSION_SECRET')]"
             }
         }
