Add Support for Google Analytics ID as env var- correct spelling

--- a/notm/webapp-config.template.json
+++ b/notm/webapp-config.template.json
@@ -24,7 +24,7 @@
         "NOMS_PRIVATE_KEY": {
             "type": "secureString"
         },
-        "GOOGLE_ANALTICS_ID": {
+        "GOOGLE_ANALYTICS_ID": {
             "type": "secureString"
         },
         "SESSION_SECRET": {
