--- a/notm/prod/config.tf.json
+++ b/notm/prod/config.tf.json
@@ -3,8 +3,8 @@
     "required_version": "~> 0.11.0",
     "backend": {
       "azurerm": {
-        "storage_account_name": "nomsstudiowebopsprod",
-        "resource_group_name": "webops-prod",
+        "resource_group_name": "notm-prod",
+        "storage_account_name": "notmprodstorage",
         "key": "notm-prod.terraform.tfstate",
         "container_name": "terraform"
       }
@@ -13,8 +13,8 @@
   "provider": {
     "azurerm": {
       "version": "0.3.3",
-      "tenant_id": "747381f4-e81f-4a43-bf68-ced6a1e14edf",
-      "subscription_id": "a5ddf257-3b21-4ba9-a28c-ab30f751b383"
+      "subscription_id": "a5ddf257-3b21-4ba9-a28c-ab30f751b383",
+      "tenant_id": "747381f4-e81f-4a43-bf68-ced6a1e14edf"
     }
   }
 }
